<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical"
    tools:context=".ui.fragment.login.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_16dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10dp"
            android:text="@string/textRegister"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="@dimen/_16dp"
        android:text="@string/textRegisterTop"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/background_login"
        android:overScrollMode="never">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/_16dp">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24dp"
                android:background="@drawable/background_edit_text_true"
                android:hint="@string/textPhoneRegister"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/_14dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/textErrorPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:layout_marginTop="@dimen/_4dp"
                android:textColor="@color/red"
                android:textSize="@dimen/_14sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textErrorPhone"
                android:layout_marginTop="@dimen/_16dp"
                android:background="@drawable/background_edit_text_true"
                android:hint="@string/textEmailRegister"
                android:maxLines="1"
                android:padding="@dimen/_14dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/textErrorEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginTop="@dimen/_4dp"
                android:textColor="@color/red"
                android:textSize="@dimen/_14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textErrorEmail"
                android:layout_marginTop="@dimen/_16dp"
                android:background="@drawable/background_edit_text_true"
                android:hint="@string/textPasswordRegister"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:padding="@dimen/_14dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                android:textSize="@dimen/_16sp" />

            <LinearLayout
                android:id="@+id/contentUppercase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginTop="@dimen/_12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/checkUppercase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/check_register_false" />

                <TextView
                    android:id="@+id/textCheckUppercase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:text="@string/textPasswordRegisterUppercase"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contentNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contentUppercase"
                android:layout_marginTop="@dimen/_12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/checkNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/check_register_false" />

                <TextView
                    android:id="@+id/textCheckNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:text="@string/textPasswordRegisterNumber"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/contentLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contentNumber"
                android:layout_marginTop="@dimen/_12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/checkLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/check_register_false" />

                <TextView
                    android:id="@+id/textCheckLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:text="@string/textPasswordRegisterLength"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_14sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/passwordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/contentLength"
                android:layout_marginTop="@dimen/_16dp"
                android:background="@drawable/background_edit_text_true"
                android:hint="@string/textPasswordRegisterAgain"
                android:inputType="textPassword"
                android:maxLength="15"
                android:maxLines="1"
                android:padding="@dimen/_14dp"
                android:textColor="@color/purple"
                android:textColorHint="@color/purple"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/textErrorPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordAgain"
                android:layout_marginTop="@dimen/_4dp"
                android:textColor="@color/red"
                android:textSize="@dimen/_14sp" />

            <CheckBox
                android:id="@+id/checkBoxPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textErrorPasswordAgain"
                android:text="@string/textPolicyRegister"
                android:textColor="@color/purple"
                app:buttonTint="@color/purple" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkBoxPolicy"
                android:layout_marginTop="@dimen/_50dp"
                android:background="@drawable/background_button"
                android:padding="@dimen/_16dp"
                android:text="@string/textContinue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>