<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.login.SuccessFragment">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_20dp"
        android:src="@drawable/baseline_close_24" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <!--        <ImageView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:src="@drawable/logo" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_19dp"
            android:text="@string/registerSuccess"
            android:textColor="@color/textColorLogin"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_12dp"
            android:text="@string/registerSuccessText"
            android:textAlignment="center"
            android:textColor="@color/color_004E5E"
            android:textSize="@dimen/_14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@drawable/background_button"
            android:padding="@dimen/_16dp"
            android:text="@string/textLogin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp" />
    </LinearLayout>


</RelativeLayout>