<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple"
    android:orientation="vertical"
    android:id="@+id/container"
    tools:context=".ui.fragment.login.ConfirmOTPFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_16dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10dp"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/toMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="@dimen/_16dp"
        android:text="@string/toPhone"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_100dp"
        android:background="@drawable/background_login"
        android:paddingHorizontal="@dimen/_16dp">

        <com.example.findaroomkotlinver2.ui.customview.pinview.OtpView
            android:id="@+id/otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:OtpCursorColor="@color/red"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_24dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="number"
            android:textColor="@color/purple"
            android:textSize="@dimen/_20sp"
            app:OtpHideLineWhenFilled="false"
            app:OtpItemCount="6"
            app:OtpItemRadius="@dimen/_8dp"
            app:OtpLineColor="@color/otp_item_state"
            app:OtpState_filled="true"
            app:OtpViewType="rectangle" />

        <LinearLayout
            android:id="@+id/contentCountTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:text="@string/notToOTP"
                android:textColor="@color/purple"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/downTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="@dimen/_30dp"
                android:textColor="@color/color_F08F35"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/sendMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contentCountTime"
            android:layout_marginTop="@dimen/_122dp"
            android:text="@string/sendMail"
            android:textAlignment="center"
            android:visibility="gone"
            android:textColor="@color/textColorLogin"
            android:textSize="@dimen/_16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_below="@+id/sendMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@drawable/background_button"
            android:padding="@dimen/_16dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sp" />



        <LinearLayout
            android:id="@+id/contentRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whatIsAccount"
                android:textColor="@color/color_979797"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/register"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/registerNow"
                android:textColor="@color/purple"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>